--- a/dnevnik/index.html
+++ b/dnevnik/index.html
@@ -162,7 +162,7 @@
             background-color: #2196f3;
         }
         .countdown-button {
-            background-color: #4CAF50; /* Весенний зеленый */
+            background-color: #4CAF50; /* Весенни зеленый */
         }
         .countdown-button:hover {
             background-color: #45a049;
