--- a/taskmanager/index.html
+++ b/taskmanager/index.html
@@ -77,9 +77,6 @@
             background: #5a825a;
         }
         #task-output .task-item {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
             padding: 10px;
             margin-bottom: 10px;
             background: #e6f3e6;
@@ -91,9 +88,30 @@
             text-decoration: line-through;
             color: #666;
         }
+        .task-item .task-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 5px;
+        }
         .task-item button {
             padding: 5px 10px;
             font-size: 14px;
+        }
+        .progress-container {
+            width: 100%;
+            height: 10px;
+            background: #d4e4d4;
+            border-radius: 5px;
+            overflow: hidden;
+        }
+        .progress-bar {
+            height: 100%;
+            background: #6b946b;
+            transition: width 0.3s;
+        }
+        .progress-bar.overdue {
+            background: #d9534f;
         }
         #file-input {
             display: none;
@@ -138,19 +156,6 @@
         const fileInput = document.getElementById('file-input');
         let tasks = [];
 
-        // Request notification permission
-        function requestNotificationPermission() {
-            if (Notification.permission !== 'granted' && Notification.permission !== 'denied') {
-                Notification.requestPermission().then(permission => {
-                    if (permission !== 'granted') {
-                        alert('Notifications are disabled. Enable them in your browser settings to receive task reminders.');
-                    }
-                });
-            } else if (Notification.permission === 'denied') {
-                alert('Notifications are disabled. Enable them in your browser settings to receive task reminders.');
-            }
-        }
-
         // Load tasks from localStorage
         function loadFromLocalStorage() {
             const saved = localStorage.getItem('springTasks');
@@ -158,12 +163,27 @@
                 tasks = JSON.parse(saved);
             }
             updateTaskList();
-            checkDueTasks(); // Start checking for due tasks
         }
 
         // Save tasks to localStorage
         function saveToLocalStorage() {
             localStorage.setItem('springTasks', JSON.stringify(tasks));
+        }
+
+        // Calculate progress for a task's due date
+        function calculateProgress(dueDate) {
+            if (!dueDate) return null;
+            const now = new Date().getTime();
+            const dueTime = new Date(dueDate).getTime();
+            const startTime = new Date(tasks.find(task => task.dueDate === dueDate).createdAt || now).getTime();
+            const totalDuration = dueTime - startTime;
+            const timeLeft = dueTime - now;
+
+            if (timeLeft <= 0) return { progress: 0, overdue: true };
+            if (totalDuration <= 0) return { progress: 100, overdue: false };
+
+            const progress = (timeLeft / totalDuration) * 100;
+            return { progress: Math.max(0, Math.min(100, progress)), overdue: false };
         }
 
         // Update task list display
@@ -181,38 +201,29 @@
                 div.className = 'task-item';
                 if (task.completed) div.className += ' completed';
                 const dueDateText = task.dueDate ? ` (Due: ${new Date(task.dueDate).toLocaleString()})` : '';
+                const progress = task.dueDate ? calculateProgress(task.dueDate) : null;
+
+                let progressBar = '';
+                if (progress) {
+                    progressBar = `
+                        <div class="progress-container">
+                            <div class="progress-bar ${progress.overdue ? 'overdue' : ''}" style="width: ${progress.progress}%"></div>
+                        </div>
+                    `;
+                }
+
                 div.innerHTML = `
-                    <span>${index + 1}. ${task.text}${dueDateText}</span>
-                    <div>
-                        <button onclick="toggleComplete(${index})">${task.completed ? 'Undo' : 'Complete'}</button>
-                        <button onclick="deleteTask(${index})">Delete</button>
+                    <div class="task-header">
+                        <span>${index + 1}. ${task.text}${dueDateText}</span>
+                        <div>
+                            <button onclick="toggleComplete(${index})">${task.completed ? 'Undo' : 'Complete'}</button>
+                            <button onclick="deleteTask(${index})">Delete</button>
+                        </div>
                     </div>
+                    ${progressBar}
                 `;
                 taskOutput.appendChild(div);
             });
-        }
-
-        // Check for due tasks and send notifications
-        function checkDueTasks() {
-            const now = Date.now();
-            tasks.forEach((task, index) => {
-                if (task.dueDate && !task.completed && !task.notified) {
-                    const dueTime = new Date(task.dueDate).getTime();
-                    if (dueTime <= now) {
-                        if (Notification.permission === 'granted') {
-                            new Notification('Task Reminder', {
-                                body: `Task "${task.text}" is due!`,
-                                icon: 'https://via.placeholder.com/16/6b946b/fff?text=T'
-                            });
-                            console.log(`Notification sent for task: ${task.text}`);
-                        }
-                        task.notified = true; // Mark as notified to prevent duplicates
-                        saveToLocalStorage();
-                    }
-                }
-            });
-            // Check every 30 seconds
-            setTimeout(checkDueTasks, 30000);
         }
 
         // Add a new task
@@ -223,11 +234,10 @@
                 return;
             }
             const dueDate = dueDateInput.value ? new Date(dueDateInput.value).toISOString() : null;
-            const task = { text, completed: false, dueDate, notified: false };
+            const task = { text, completed: false, dueDate, createdAt: new Date().toISOString() };
             tasks.push(task);
             saveToLocalStorage();
             updateTaskList();
-            console.log(`Task added: ${text}, Due: ${dueDate || 'None'}`);
             taskInput.value = '';
             dueDateInput.value = '';
         }
@@ -235,7 +245,6 @@
         // Toggle task completion
         function toggleComplete(index) {
             tasks[index].completed = !tasks[index].completed;
-            if (tasks[index].completed) tasks[index].notified = true; // Stop notifications for completed tasks
             saveToLocalStorage();
             updateTaskList();
         }
@@ -305,7 +314,7 @@
                             text: text.trim(),
                             completed: status === 'X',
                             dueDate,
-                            notified: false
+                            createdAt: new Date().toISOString()
                         });
                     }
                     tasks = importedTasks;
@@ -321,7 +330,6 @@
         }
 
         // Initialize
-        requestNotificationPermission();
         loadFromLocalStorage();
 
         // Event listeners
@@ -329,6 +337,9 @@
             if (e.key === 'Enter') addTask();
         });
         fileInput.addEventListener('change', importTasks);
+
+        // Periodically update progress bars
+        setInterval(updateTaskList, 60000); // Update every minute
     </script>
 </body>
 </html>
