--- a/game/index.html
+++ b/game/index.html
@@ -175,14 +175,14 @@
             Уровень: <span id="level">1</span>
         </div>
         <div id="controlsInfo">
-            Управление: WASD или касание
+            Управление: мышка
         </div>
         <div id="levelInfo">Уровень 1</div>
         <div id="startScreen">
             <h1 id="gameTitle">КОСМИЧЕСКИЙ АРКАНОИД PRO</h1>
             <div class="score-info">Максимальный счет: <span id="highScoreDisplay" class="high-score">0</span></div>
             <div class="score-info">Последний счет: <span id="lastScoreDisplay" class="current-score">0</span></div>
-            <p>Используйте WASD или касание для движения платформы</p>
+            <p>Используйте мышку для передвижения платформы</p>
             <p>Разбейте все блоки на 5 уровнях сложности!</p>
             <button id="startButton" aria-label="Start Game">СТАРТ</button>
         </div>
